--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "node server/index.js",
-    "dev" : "nodemon server/index.js",
-    "client": "cd client && npm start",
-    "setup-project":"npm i && cd client && npm i"
+    "scripts": {
+      "start": "node server/index.js",
+      "dev": "nodemon server/index.js",
+      "setup-project": "npm i && cd client && npm i",
+      "client": "cd client && npm start",
+      "heroku-postbuild": "cd client && npm install && npm run build"
+    },
 
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GSG-G10/Crown-Ecommerce.git"
