--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "dev" : "nodemon server/index.js",
+    "dev": "nodemon server/index.js",
+    "setup-project": "npm i && cd client && npm i",
     "client": "cd client && npm start",
-    "setup-project":"npm i && cd client && npm i"
-
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
