--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,13 @@
       "react-app",
       "plugin:prettier/recommended",
       "prettier"
-    ]
+    ],
+    "plugins": [
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": "error"
+    }
   },
   "browserslist": {
     "production": [
