--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "set NODE_ENV=production& node server/index.js",
-    "dev": "set NODE_ENV=development& nodemon server/index.js",
+    "start": "NODE_ENV=production node server/index.js",
+    "dev": "NODE_ENV=development nodemon server/index.js",
     "setup-project": "npm i && cd client && npm i",
     "client": "cd client && npm start",
     "heroku-postbuild": "cd client && npm install && npm run build"
