--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "set NODE_ENV=production& node server/index.js",
-    "dev": "set NODE_ENV=development& nodemon server/index.js",
+    "start": "cross-env NODE_ENV=production node server/index.js",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js",
     "setup-project": "npm i && cd client && npm i",
     "client": "cd client && npm start",
     "heroku-postbuild": "cd client && npm install && npm run build"
@@ -32,6 +32,7 @@
     "pg": "^8.7.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2",
