--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/GSG-G10/Crown-Ecommerce#readme",
   "dependencies": {
+    "antd": "^4.16.13",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
